# AC04-Professor_e_aluno

./: .gitpod.yml  README.md  pyproject.toml  runtest_professor_e_aluno.py  servidor_alunos.py
